--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Сначала настраиваем SSH
+      # Настройка SSH
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
@@ -27,40 +27,55 @@ jobs:
       - name: Deploy with validation
         run: |
           ssh target-server "
-            set -e  # Прерывать при ошибках
-            cd buisnes_kufar && \
+            set -e  # Прерывать при любой ошибке
             
-            # 1. Получаем и применяем изменения
+            cd buisnes_kufar
+            
+            # 1. Проверяем изменения
             git fetch origin
             if git diff --quiet HEAD origin/master; then
               echo '✅ Нет новых изменений. Выходим.'
               exit 0
             fi
+            
+            # 2. Создаем точку отката
+            current_commit=\$(git rev-parse HEAD)
+            
+            # 3. Применяем изменения
             git reset --hard origin/master
             
-            # 2. Запускаем контейнеры с новыми изменениями
-            docker compose up -d --build --force-recreate && \
-            
-            # 3. Даём время на запуск (если нужно)
-            sleep 15 && \
-            
-            # 4. Проверяем ОСНОВНЫЕ контейнеры
-            REQUIRED_CONTAINERS='backend frontend nginx'
-            if docker compose ps --status running | grep -qE \"(${REQUIRED_CONTAINERS// /|})\"; then
-              echo '✅ Основные контейнеры запущены! Изменения применены.'
+            # 4. Пытаемся собрать и запустить контейнеры
+            if docker compose up -d --build --force-recreate; then
+              # 5. Даем время на запуск
+              sleep 15
+              
+              # 6. Проверяем ОСНОВНЫЕ контейнеры
+              REQUIRED_CONTAINERS='backend frontend nginx'
+              running_containers=\$(docker compose ps --services --filter 'status=running')
+              
+              for container in \$REQUIRED_CONTAINERS; do
+                if ! echo \"\$running_containers\" | grep -q \"^\$container\$\"; then
+                  echo \"❌ Контейнер \$container не запущен!\"
+                  echo \"=== Логи контейнера ===\"
+                  docker compose logs \$container
+                  exit 1
+                fi
+              done
+              
+              echo '✅ Все контейнеры успешно запущены!'
             else
-              echo '❌ Ошибка: не все контейнеры запустились! Откатываем...'
-              git reset --hard HEAD^
+              echo '❌ Ошибка сборки/запуска контейнеров! Откатываем...'
+              git reset --hard \$current_commit
               docker compose down
-              docker compose up -d  # Пытаемся запустить предыдущую версию
+              docker compose up -d
               exit 1
             fi
-          "
+          " || exit 1  # Важно: завершаем step с ошибкой если ssh команда завершилась с ошибкой
 
       - name: Clean up old images
+        if: success()
         run: |
           ssh target-server "
-            # Очистка неиспользуемых образов
             echo '🧹 Очистка неиспользуемых Docker образов...'
             docker image prune -af
             echo '✅ Очистка завершена.'
