--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,7 +84,7 @@ return 301 https://tradesynergy.ru;
       }
 
       # Обработка API (бэкенд)
-      location ~ ^(/(/api|admin) {
+      location ~ ^(/api|admin) {
           proxy_pass http://backend;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header Host $host;
