--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,8 +22,6 @@ server {
     }
 
 
-
-
 return 301 https://$server_name$request_uri;
 }
 
@@ -101,7 +99,7 @@ return 301 https://tradesynergy.ru;
       }
 
       location /uploads {
-          alias /app/uploads/;
+          alias /app/uploads;
       }
 
       location / {
