--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,13 +14,16 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    # Разрешить доступ к ACME Challenge для Certbot
+    # Handle ACME Challenge first
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
         try_files $uri =404;
     }
 
-    return 301 https://$server_name$request_uri;
+    # Redirect all other HTTP traffic to HTTPS
+    location / {
+        return 301 https://$server_name$request_uri;
+    }
 }
 
 server {
