--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -85,7 +85,16 @@ server {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_redirect off;
+        
+        # Добавляем заголовки для статических файлов
+        sub_filter_once off;
+        sub_filter_types text/html;
+        sub_filter 'http://$host' 'https://$host';
+        sub_filter 'http://tradesynergy.ru' 'https://tradesynergy.ru';
     }
 
     # Статика Nuxt.js
