--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,22 +80,21 @@ server {
         return 301 https://tradesynergy.ru$request_uri;
     }
 
-    # Обработка API (бэкенд)
-    location ~ ^(/api|/admin) {
-        proxy_pass http://backend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_redirect off;
-        
-        # Добавляем заголовки для статических файлов
-        sub_filter_once off;
-        sub_filter_types text/html;
-        sub_filter 'http://$host' 'https://$host';
-        sub_filter 'http://tradesynergy.ru' 'https://tradesynergy.ru';
-    }
+location ~ ^(/api|/admin) {
+    proxy_pass http://backend;
+
+    # Важные заголовки для HTTPS
+    proxy_set_header X-Forwarded-Proto $scheme;  # Передаем протокол (https)
+    proxy_set_header Host $host;
+
+    # Автоматически заменяем http:// на https:// в ответах бэкенда
+    proxy_redirect http:// https://;
+
+    # Дополнительно: заменяем HTTP-ссылки в HTML/JS/CSS
+    sub_filter_once off;
+    sub_filter_types *;
+    sub_filter 'http://tradesynergy.ru' 'https://tradesynergy.ru';
+}
 
     # Статика Nuxt.js
     location ~ ^/(_nuxt|_ipx) {
