--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,28 @@ jobs:
           echo "  IdentityFile ~/.ssh/id_ed25519" >> ~/.ssh/config
           echo "  StrictHostKeyChecking no" >> ~/.ssh/config
 
-      - name: Pre-cache Docker images
+      - name: Pre-cache Docker images with retries
         run: |
           ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@${{ secrets.SERVER_IP }} << 'EOF'
-          echo "🔹 Предзагрузка Docker-образов..."
-          docker pull nginx:1.25 || true
-          docker pull python:3.12-slim || true
-          docker pull node:20-slim || true
-          echo "✅ Основные образы загружены в кэш."
+          echo "🔹 Предзагрузка Docker-образов с повторами..."
+          for image in nginx:1.25 python:3.12-slim node:20-slim; do
+            for i in {1..3}; do
+              if docker pull $image; then
+                echo "✅ Успешно загружен $image"
+                break
+              else
+                echo "⚠️ Попытка $i/3 не удалась для $image"
+                if [ $i -eq 3 ]; then
+                  echo "❌ Не удалось загрузить $image после 3 попыток"
+                  # Не выходим с ошибкой, так как образы могут быть пересобраны
+                fi
+                sleep 5
+              fi
+            done
+          done
           EOF
 
-      - name: Deploy with validation
+      - name: Deploy with validation and rollback
         run: |
           ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@${{ secrets.SERVER_IP }} << 'EOF'
           set -e
@@ -49,29 +60,43 @@ jobs:
           
           # Создаем точку отката
           current_commit=$(git rev-parse HEAD)
+          echo "Точка отката: $current_commit"
           
           # Применяем изменения
           git reset --hard origin/master
           
-          # Пытаемся собрать и запустить контейнеры
-          if docker compose build --pull && docker compose up -d --force-recreate; then
+          # Очищаем старые контейнеры и сети
+          docker compose down || true
+          
+          # Пытаемся собрать и запустить с очисткой кеша
+          echo "🛠 Сборка и запуск контейнеров..."
+          if docker compose build --no-cache && docker compose up -d; then
             # Даем время на запуск
-            sleep 15
+            sleep 20
             
             # Проверяем ОСНОВНЫЕ контейнеры
             REQUIRED_CONTAINERS="backend frontend nginx"
             running_containers=$(docker compose ps --services --filter "status=running")
+            failed=false
             
             for container in $REQUIRED_CONTAINERS; do
               if ! echo "$running_containers" | grep -q "^$container$"; then
                 echo "❌ Контейнер $container не запущен!"
                 echo "=== Логи контейнера ==="
                 docker compose logs $container
-                exit 1
+                failed=true
               fi
             done
             
-            echo "✅ Все контейнеры успешно запущены!"
+            if [ "$failed" = true ]; then
+              echo "❌ Не все контейнеры запущены! Откатываем..."
+              git reset --hard $current_commit
+              docker compose down
+              docker compose up -d
+              exit 1
+            else
+              echo "✅ Все контейнеры успешно запущены!"
+            fi
           else
             echo "❌ Ошибка сборки/запуска контейнеров! Откатываем..."
             git reset --hard $current_commit
@@ -82,10 +107,10 @@ jobs:
           EOF
 
       - name: Clean up old images
-        if: success()
+        if: always()  # Очищаем всегда, даже если предыдущие шаги упали
         run: |
           ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@${{ secrets.SERVER_IP }} << 'EOF'
           echo "🧹 Очистка неиспользуемых Docker образов..."
-          docker image prune -af
+          docker system prune -af --volumes || true
           echo "✅ Очистка завершена."
           EOF
