--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,8 @@ diskcache = "^5.6.3"
 uvicorn = "^0.34.3"
 aiofiles = "^24.1.0"
 python-slugify = "^8.0.4"
+asyncpg = "^0.30.0"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
