--- a/backend/docker-compose-dev.yml
+++ b/backend/docker-compose-dev.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: "postgres"
       POSTGRES_DB: "postgres"
     volumes:
-      - postgres-data:/var/lib/postgresql/data  # Именованный том для данных
+      - tradesynergy-db:/var/lib/postgresql/data  # Именованный том для данных
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
@@ -18,4 +18,4 @@ services:
 
 
 volumes:
-  postgres-data:  # Для PostgreSQL
+  tradesynergy-db:  # Для PostgreSQL
