--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,11 +21,12 @@ python-multipart = "^0.0.20"
 pydantic = {extras = ["email"], version = "^2.11.5"}
 fastapi-mail = "^1.5.0"
 diskcache = "^5.6.3"
-uvicorn = "^0.34.3"
+uvicorn = {extras = ["standard"], version = "^0.34.3"}
 aiofiles = "^24.1.0"
 python-slugify = "^8.0.4"
 asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
+websockets = "^13.0"
 
 
 [build-system]
